--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -1,11 +1,11 @@
-  #info {
-    position: absolute;
-    top: 10px;
-    width: 100%;
-    text-align: center;
-    z-index: 100;
-    display:block;
-  }
+#info {
+  position: absolute;
+  top: 10px;
+  width: 100%;
+  text-align: center;
+  z-index: 100;
+  display:block;
+}
   #leCanvas{
     float:left;
     width: 800px;
@@ -18,7 +18,7 @@
     height:800px;
     width:200px;
     float:left;
-    background:white;
+    background:brown;
     border:red 10px;
     border-radius: 10px;
   }
@@ -40,12 +40,18 @@
     margin-bottom: 4px;
   }
   #group-tip {
-    padding: 4px;
-    height: 135px;
-    font-size: 16px;
-    font-weight: 400;
+    display: none; 
+    position: absolute; 
+    pointer-events: none; 
+    font-size: 14px; 
+    width: 250px; 
     color: black;
-      }
+    text-align: center; 
+    line-height: 1; 
+    padding: 6px; 
+    background: white; 
+    font-family: sans-serif;
+  }
 /*   
   .app {
     height: 100vh;
