--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -8,17 +8,17 @@
   }
   #leCanvas{
     float:left;
-    width: 800px;
-    height:600px;
+    width: 100%;
+    height:500px;
     /* border: black; */
     /* border-radius: 10px; */
   }
   #leSidebar{
     position: absolute;
-    height:800px;
-    width:200px;
+    height:100%;
+    widows: 200px;
     float:left;
-    background:white;
+    background-color: rgb(0, 26, 255);
     border:red 10px;
     border-radius: 10px;
   }
@@ -63,6 +63,7 @@
     color: aquamarine;
   }
 
+
   .kubLogo {
     transform: rotate(360deg);
     height: 300px;
@@ -79,7 +80,7 @@
     height: 100px;
     width: 100px;
     margin-top: 35px;
-    margin-left: 92px;
+    margin-left: 225px;
     background-color: oldlace;
     border: solid 5px black;
     border-radius: 20px;
@@ -136,6 +137,7 @@
     width: 75px;
     border: dodgerblue solid 5px;
     border-radius: 5px;
+    margin-left: 30px;
     margin-top: 30px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: bold;
@@ -159,11 +161,7 @@
     flex-direction: column;
     float:left;
   }
-  #infobox{
-    display:flex;
-    flex-direction: column;
-    float:right;
-  }
+  
 
   .buts{
     display:flex;
@@ -181,7 +179,7 @@
   #clicker:focus+#hiddenAf{
     display:block;
   }
-  .uploadButt {
+  /* .uploadButt {
     float:inline-end;
     height: 50px;
     width: 75px;
@@ -192,11 +190,21 @@
     font-weight: bold;
     font-size: 15px;
     background-color: rgb(255, 255, 255);
-    }
+    } */
   .loc{
-    height:20px;
+    /* height:20px;
     width:200px;
-    font-size:15px;
+    font-size:15px; */
+    height: 50px;
+    width: 175px;
+    border: dodgerblue solid 5px;
+    border-radius: 5px;
+    margin-left: 30px;
+    margin-top: 30px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: bold;
+    font-size: 15px;
+    background-color: rgb(255, 255, 255);
   }
   .clusterType{
     height:20px;
@@ -222,4 +230,105 @@
     margin-top: 15px;
     color: aquamarine;
     margin-left: 285px;
+  }
+
+  #root {
+    background-color: black;
+    position: absolute;
+    top: 0; bottom: 0; right: 0; left: 0;
+    outline: thin dashed green;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .mainDiv {
+
+    margin-right: 200px;
+  }
+
+
+  .vizDiv {
+    height: 100%;
+  }
+
+  .SB {
+    height: 50px;
+    width: 175px;
+    border: rgb(7, 185, 255) solid 5px;
+    border-radius: 5px;
+    /* margin-left: 30px;
+    margin-top: 30px; */
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: bold;
+    font-size: 15px;
+    background-color: rgb(255, 2, 213);
+  }
+
+  .clusterType {
+    height: 50px;
+    width: 175px;
+    border: dodgerblue solid 5px;
+    border-radius: 5px;
+    /* margin-left: 30px;
+    margin-top: 30px; */
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: bold;
+    font-size: 15px;
+    background-color: azure;
+  }
+
+  .uploadButtD {
+    height: 50px;
+    width: 175px;
+    border: dodgerblue solid 5px;
+    border-radius: 5px;
+    /* margin-left: 30px;
+    margin-top: 30px; */
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: bold;
+    font-size: 15px;
+    background-color: azure;
+  }
+
+  #deployLoc {
+    margin-bottom: 5px;
+  }
+
+  #infobox{
+    display:flex;
+    flex-direction: column;
+    float:right;
+    /* margin-top: 50px; */
+    width: 450px;
+  }
+
+  #deployBack {
+    margin-left: 30px;
+  }
+
+  #deploySubmit {
+    margin-left: 40px;
+  }
+
+  #deployChooseClustType{
+    margin-left: 40px;
+  }
+
+  #deployClustName {
+    margin-left: 42px;
+    width: 375px;
+  }
+
+  #uploadDivForSubmitandBackButts {
+    margin-left: 275px;
+  }
+  #uploadSelectMenu {
+    margin-left: 230px;
+    width: 300px;
+  }
+
+  #uploadPage2SubmitandBackButts {
+    margin-top: 50px;
+    margin-left: 275px;
   }
