added checkboxes to allow for selection of multiple locations for getting GCP clusters

--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -229,6 +229,7 @@
     display:block;
   }
   .loc{
+    /* used in UploadPage */
     height: 50px;
     border: dodgerblue solid 5px;
     border-radius: 5px;
@@ -397,7 +398,12 @@
   }
   
   #uploadSelectMenu {
-    width: 300px;
+    /* used in UploadPage */
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
   }
 
   #uploadPage2SubmitandBackButts {
