Revert "User now able to view GCP clusters from multiple locations, light formatting editing"

--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -36,7 +36,6 @@
     min-width: 216px;
     min-height: 280px;
     border-style: inset;
-    z-index: 100000;
   }
   #tool-tip {
     display: none;
@@ -229,7 +228,6 @@
     display:block;
   }
   .loc{
-    /* used in UploadPage */
     height: 50px;
     border: dodgerblue solid 5px;
     border-radius: 5px;
@@ -398,12 +396,7 @@
   }
   
   #uploadSelectMenu {
-    /* used in UploadPage */
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
+    width: 300px;
   }
 
   #uploadPage2SubmitandBackButts {
