--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -337,8 +337,8 @@ canvas {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(4, 1fr);
-  grid-column-gap: 10px;
-  grid-row-gap: 10px;
+  /* grid-column-gap: 10px; */
+  /* grid-row-gap: 10px; */
 }
 
 #uploadPage2SubmitandBackButts {
@@ -412,6 +412,12 @@ canvas {
   font-size: 80px;
 }
 
+.getGCPWrapper {
+  height: 35%;
+  width: 98%;
+  margin : 0 auto;
+}
+
 /* GCP deploy */
 #deployClustName {
   margin: 10px auto;
@@ -435,7 +441,7 @@ canvas {
 .inputPageDeploy{
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 60%;
   margin: 0px auto;
   padding-top: 50px;
 }
@@ -458,6 +464,7 @@ canvas {
   grid-row-gap: 0px;
   font-size: 16px;
   justify-content: center;
+  line-height: 1.5;
   }
 #buts{
   display: flex;
