--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -7,10 +7,9 @@
   display:block;
 }
 #leCanvas{
-  float: right;
-  height:99.5%;
-  /* border-style: inset; */
-  position: absolute;
+  position: fixed;
+  top: 0;
+  height: 99.5%;
   overflow: hidden;
 }
 canvas {
@@ -146,13 +145,13 @@ canvas {
 }
 .uploadInput {
   height: 70px;
-  width: 300px;
+  width: 90%;
   border: dodgerblue solid 5px;
   border-radius: 5px;
   color: black;
   background-color: rgb(255, 255, 255);
   font-size: 30px;
-  margin-top: 10px;
+  margin: 10px auto;
   font-family: 'Nunito', sans-serif;
 }
 .buttonHolder {
@@ -162,10 +161,10 @@ canvas {
 }
 .uploadButt {
   height: 50px;
-  width: 100px;
+  width: 150px;
   border: dodgerblue solid 5px;
   border-radius: 5px;
-  margin-top: 30px;
+  margin: 30px auto;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-weight: bold;
   font-size: 15px;
@@ -173,14 +172,17 @@ canvas {
 }
 .backButton{
   height: 50px;
-  width: 100px;
+  width: 150px;
   border: dodgerblue solid 5px;
   border-radius: 5px;
-  margin-top: 30px;
+  margin: 0px auto;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-weight: bold;
   font-size: 15px;
   background-color: rgb(255, 255, 255);
+}
+#buttonToGoBack {
+  display:flex;
 }
 /* #displays {
   width: 100%;
@@ -195,18 +197,19 @@ canvas {
 .fetchAWS {
   height: 30%;
   width: 100%;
-  padding-top: 50px;
+  display: flex;
+  flex-direction: column;
 }
 .awsGetClusterName {
   width: 90%;
-  margin: 20px 10px auto;
+  margin: 0px auto;
   height: 40px;
 }
 .awsDeployClusterName {
   display: flex;
   width: 90%;
   height: 40px;
-  margin: 20px auto;
+  margin: 10px auto;
 }
 
 #clicker {
@@ -235,13 +238,14 @@ canvas {
   width: 300px;
   margin: 0 auto;
   display: flex;
+  text-align: center;
   flex-direction: column;
   justify-content: center;
   align-content: center;
 }
 .uploadDiv {
   height: 100%;
-  width: 300px;
+  width: 90%;
   display: flex;
   flex-direction: column;
   align-content: center;
@@ -322,6 +326,7 @@ canvas {
   font-weight: bold;
   font-size: 15px;
   background-color: azure;
+  margin-top: 10px;
 }
 
 #deployLoc {
@@ -357,8 +362,6 @@ canvas {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(4, 1fr);
-  grid-column-gap: 10px;
-  grid-row-gap: 10px;
 }
 
 #uploadPage2SubmitandBackButts {
@@ -403,23 +406,23 @@ canvas {
 }
 .awsImageContainer {
   box-sizing: border-box;
-  width: 300px;
+  width: 90%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-content: center;
+  text-align: center;
 }
 .count {
   width: 49%;
   margin-bottom: 5px;
 }
-/* .landingTitle {
+.landingTitle {
   display: flex;
   flex-direction: column;
-  color: aqua;
   width: 100%;
-} */
+}
 /* .title {
   display: flex;
   flex-direction: column;
@@ -442,6 +445,7 @@ canvas {
 #deployClustName {
   margin: 10px auto;
   width: 95%;
+  height: 70px;
 }
 .clusterType {
   height: 50px;
@@ -455,19 +459,19 @@ canvas {
   background-color: azure;
 }
 #deployWrapper {
-  height: 100%;
+  height: 110%;
   width:100%;
 }
-.deployWrapper {
+/* .deployWrapper {
   height: 100%;
   width:100%;
-}
+} */
 .inputPageDeploy{
   display: flex;
   flex-direction: column;
   height: 60%;
   margin: 0px auto;
-  padding-top: 50px;
+  padding-top: 10px;
 }
 #deployDropDowns {
   width: 100%;
@@ -493,8 +497,8 @@ canvas {
 #buts{
   display: flex;
   justify-content: space-evenly;
-  padding-bottom: 20px;
-  padding-top: 20px;
+  /* padding-bottom: 20px;
+  padding-top: 20px; */
 }
 .div1 { grid-area: 1 / 1 / 2 / 2; }
 .div2 { grid-area: 1 / 2 / 2 / 3; }
