--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -144,15 +144,11 @@ canvas {
 }
 }
 .uploadInput {
-  height: 70px;
+  display: flex;
+  height: 60px;
   width: 90%;
-  border: dodgerblue solid 5px;
-  border-radius: 5px;
-  color: black;
-  background-color: rgb(255, 255, 255);
-  font-size: 30px;
+  font-size: 24px;
   margin: 10px auto;
-  font-family: 'Nunito', sans-serif;
 }
 .buttonHolder {
   display: flex;
@@ -210,6 +206,7 @@ canvas {
   width: 90%;
   height: 40px;
   margin: 10px auto;
+  font-size: 16px;
 }
 
 #clicker {
@@ -445,7 +442,7 @@ canvas {
 #deployClustName {
   margin: 10px auto;
   width: 95%;
-  height: 70px;
+  height: 60px;
 }
 .clusterType {
   height: 50px;
